apps/memos/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memos-ingressroute
  namespace: memos
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`memos.tomerc.com`)
      kind: Rule
      services:
        - name: memos-service
          port: 5230
